# name: test_command_delete[False-False-False-False]
  '''
  This action will delete following hikes:
  
  [3m                              Hikes                               [0m
                                                                    
   [1m [0m[1mID[0m[1m [0m [1m [0m[1mDate      [0m[1m [0m [1m [0m[1mName    [0m[1m [0m [1m [0m[1m➡ km[0m[1m [0m [1m [0m[1m ⬈ m[0m[1m [0m [1m [0m[1m ⬊ m[0m[1m [0m [1m [0m[1m    ⏱[0m[1m [0m [1m [0m[1mkm/h[0m[1m [0m 
   ──────────────────────────────────────────────────────────────── 
     1   1984-09-22   Foo Hike   10.5   2040   2028   02:14   4.70  
     2   1984-09-23   Bar Hike   15.4    240    228   03:48   4.05  
                                                                    
  Aborting
  
  '''
# ---
# name: test_command_delete[False-False-False-True]
  '''
  This action will delete following hikes:
  
  [3m                              Hikes                               [0m
                                                                    
   [1m [0m[1mID[0m[1m [0m [1m [0m[1mDate      [0m[1m [0m [1m [0m[1mName    [0m[1m [0m [1m [0m[1m➡ km[0m[1m [0m [1m [0m[1m ⬈ m[0m[1m [0m [1m [0m[1m ⬊ m[0m[1m [0m [1m [0m[1m    ⏱[0m[1m [0m [1m [0m[1mkm/h[0m[1m [0m 
   ──────────────────────────────────────────────────────────────── 
     1   1984-09-22   Foo Hike   10.5   2040   2028   02:14   4.70  
     2   1984-09-23   Bar Hike   15.4    240    228   03:48   4.05  
     3   1984-09-24   Baz Hike   34.0    867    947   08:17   4.10  
                                                                    
  Aborting
  
  '''
# ---
# name: test_command_delete[False-False-True-False]
  '''
  This action will delete following hikes:
  
  [3m                              Hikes                               [0m
                                                                    
   [1m [0m[1mID[0m[1m [0m [1m [0m[1mDate      [0m[1m [0m [1m [0m[1mName    [0m[1m [0m [1m [0m[1m➡ km[0m[1m [0m [1m [0m[1m ⬈ m[0m[1m [0m [1m [0m[1m ⬊ m[0m[1m [0m [1m [0m[1m    ⏱[0m[1m [0m [1m [0m[1mkm/h[0m[1m [0m 
   ──────────────────────────────────────────────────────────────── 
     1   1984-09-22   Foo Hike   10.5   2040   2028   02:14   4.70  
     2   1984-09-23   Bar Hike   15.4    240    228   03:48   4.05  
                                                                    
  
  '''
# ---
# name: test_command_delete[False-False-True-True]
  '''
  This action will delete following hikes:
  
  [3m                              Hikes                               [0m
                                                                    
   [1m [0m[1mID[0m[1m [0m [1m [0m[1mDate      [0m[1m [0m [1m [0m[1mName    [0m[1m [0m [1m [0m[1m➡ km[0m[1m [0m [1m [0m[1m ⬈ m[0m[1m [0m [1m [0m[1m ⬊ m[0m[1m [0m [1m [0m[1m    ⏱[0m[1m [0m [1m [0m[1mkm/h[0m[1m [0m 
   ──────────────────────────────────────────────────────────────── 
     1   1984-09-22   Foo Hike   10.5   2040   2028   02:14   4.70  
     2   1984-09-23   Bar Hike   15.4    240    228   03:48   4.05  
     3   1984-09-24   Baz Hike   34.0    867    947   08:17   4.10  
                                                                    
  
  '''
# ---
# name: test_command_delete[True-False-False-False]
  '''
  This action will delete following hikes:
  
  [3m                              Hikes                               [0m
                                                                    
   [1m [0m[1mID[0m[1m [0m [1m [0m[1mDate      [0m[1m [0m [1m [0m[1mName    [0m[1m [0m [1m [0m[1m➡ km[0m[1m [0m [1m [0m[1m ⬈ m[0m[1m [0m [1m [0m[1m ⬊ m[0m[1m [0m [1m [0m[1m    ⏱[0m[1m [0m [1m [0m[1mkm/h[0m[1m [0m 
   ──────────────────────────────────────────────────────────────── 
     1   1984-09-22   Foo Hike   10.5   2040   2028   02:14   4.70  
     2   1984-09-23   Bar Hike   15.4    240    228   03:48   4.05  
                                                                    
  
  '''
# ---
# name: test_command_delete[True-False-False-True]
  '''
  This action will delete following hikes:
  
  [3m                              Hikes                               [0m
                                                                    
   [1m [0m[1mID[0m[1m [0m [1m [0m[1mDate      [0m[1m [0m [1m [0m[1mName    [0m[1m [0m [1m [0m[1m➡ km[0m[1m [0m [1m [0m[1m ⬈ m[0m[1m [0m [1m [0m[1m ⬊ m[0m[1m [0m [1m [0m[1m    ⏱[0m[1m [0m [1m [0m[1mkm/h[0m[1m [0m 
   ──────────────────────────────────────────────────────────────── 
     1   1984-09-22   Foo Hike   10.5   2040   2028   02:14   4.70  
     2   1984-09-23   Bar Hike   15.4    240    228   03:48   4.05  
     3   1984-09-24   Baz Hike   34.0    867    947   08:17   4.10  
                                                                    
  
  '''
# ---
# name: test_command_delete[True-False-True-False]
  '''
  This action will delete following hikes:
  
  [3m                              Hikes                               [0m
                                                                    
   [1m [0m[1mID[0m[1m [0m [1m [0m[1mDate      [0m[1m [0m [1m [0m[1mName    [0m[1m [0m [1m [0m[1m➡ km[0m[1m [0m [1m [0m[1m ⬈ m[0m[1m [0m [1m [0m[1m ⬊ m[0m[1m [0m [1m [0m[1m    ⏱[0m[1m [0m [1m [0m[1mkm/h[0m[1m [0m 
   ──────────────────────────────────────────────────────────────── 
     1   1984-09-22   Foo Hike   10.5   2040   2028   02:14   4.70  
     2   1984-09-23   Bar Hike   15.4    240    228   03:48   4.05  
                                                                    
  
  '''
# ---
# name: test_command_delete[True-False-True-True]
  '''
  This action will delete following hikes:
  
  [3m                              Hikes                               [0m
                                                                    
   [1m [0m[1mID[0m[1m [0m [1m [0m[1mDate      [0m[1m [0m [1m [0m[1mName    [0m[1m [0m [1m [0m[1m➡ km[0m[1m [0m [1m [0m[1m ⬈ m[0m[1m [0m [1m [0m[1m ⬊ m[0m[1m [0m [1m [0m[1m    ⏱[0m[1m [0m [1m [0m[1mkm/h[0m[1m [0m 
   ──────────────────────────────────────────────────────────────── 
     1   1984-09-22   Foo Hike   10.5   2040   2028   02:14   4.70  
     2   1984-09-23   Bar Hike   15.4    240    228   03:48   4.05  
     3   1984-09-24   Baz Hike   34.0    867    947   08:17   4.10  
                                                                    
  
  '''
# ---
